--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -395,7 +395,7 @@ ul {
     /* Full-width portrait background with dark gradient on the left */
     background-image:
         linear-gradient(to right, rgba(0, 0, 0, 0.88) 0%, rgba(0, 0, 0, 0.7) 30%, rgba(0, 0, 0, 0.25) 60%, rgba(0, 0, 0, 0) 100%),
-        url('../img/khea-portrait.jpg');
+           url('../img/khea-portrait.JPG');
     background-size: cover;
     background-position: center right;
     background-repeat: no-repeat;
